--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^1.18.10"
   },
   "scripts": {
+    "deploy": "prisma deploy",
     "dev": "nodemon src/server.js --exec babel-node --presets @babel/preset-env"
   }
 }
