--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "graphql-tools": "^4.0.4",
     "graphql-yoga": "^1.17.4",
     "merge-graphql-schemas": "^1.5.8",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "prisma-client-lib": "^1.28.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -21,6 +22,8 @@
   },
   "scripts": {
     "deploy": "prisma deploy",
+    "generate": "prisma generate",
+    "prisma": "yarn run deploy && yarn generate",
     "dev": "nodemon src/server.js --exec babel-node --presets @babel/preset-env"
   }
 }
